[gd_scene load_steps=25 format=2]

[ext_resource path="res://Menu.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/Icons/map1.png" type="Texture" id=2]
[ext_resource path="res://Fonts/NicholsonGothicRegular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/bebasneuecyrillic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Icons/map2.png" type="Texture" id=5]
[ext_resource path="res://scripts/Level_Selecter.gd" type="Script" id=6]
[ext_resource path="res://audio/Sounds/Menu_Tick.wav" type="AudioStream" id=7]
[ext_resource path="res://shaders/vignette.tres" type="Material" id=8]
[ext_resource path="res://Sprites/Icons/map3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Icons/map4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Icons/Screenshot_7.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Icons/Screenshot_12.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Icons/createanewmap.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Icons/createanewmappressed.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Icons/loadamappressed.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Icons/loadamap.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Icons/map5.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Icons/map7.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Icons/map8.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Icons/map 9.png" type="Texture" id=20]
[ext_resource path="res://Sprites/sparkle.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 21
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 34
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 43
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Level_Selecter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -677, 0 )
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0431373, 0.0627451, 0.87451 )

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -61.0
margin_right = -177.0
margin_bottom = -24.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "BACK"

[node name="Play" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -81.0
margin_right = -28.0
margin_bottom = -23.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "PLAY"

[node name="Dev_Room" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -162.0
margin_top = 31.0
margin_right = -28.0
margin_bottom = 68.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "DEV ROOM"

[node name="FNAF1" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = -230.0
margin_right = -233.0
margin_bottom = -156.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "FREDDY FAZBEARS PIZZA"
align = 1

[node name="FNAF2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = 30.0
margin_right = -233.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "FAZBEARS FRIGHTS"
align = 1

[node name="FNAF3" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -90.0
margin_right = -16.0
margin_bottom = -16.0
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -70.0
margin_right = 260.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "freadbears family diner"
align = 1

[node name="FNAF4" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = -90.0
margin_right = -233.0
margin_bottom = -16.0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "sister location"
align = 1

[node name="FNAF5" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -230.0
margin_right = -16.0
margin_bottom = -156.0
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "aftons house"
align = 1

[node name="FNAF6" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = 30.0
margin_right = -16.0
margin_bottom = 104.0
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "test map"
align = 1

[node name="FNAF9" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.0
margin_top = -232.0
margin_right = 220.0
margin_bottom = -158.0
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF9"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "FREDDY FAZBEARS PIZZA 2"
align = 1

[node name="FNAF10" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.0
margin_top = -90.0
margin_right = 220.0
margin_bottom = -16.0
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF10"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "THE FINALE LOCATION"
align = 1

[node name="FNAF12" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = 150.0
margin_right = -239.0
margin_bottom = 224.0
texture_normal = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF12"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "BASEMENT"
align = 1

[node name="FNAF11" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.0
margin_top = 28.0
margin_right = 220.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -969, 72 )
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF11"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 215.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "house"
align = 1

[node name="FNAF7" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 266.0
margin_top = -232.0
margin_right = 467.0
margin_bottom = -158.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
texture_focused = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 206.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "CREATE A NEW MAP"
align = 1

[node name="FNAF8" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 266.0
margin_top = -90.0
margin_right = 467.0
margin_bottom = -16.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="FNAF8"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -70.0
margin_right = 206.5
margin_bottom = -26.0
rect_scale = Vector2( 0.680843, 0.698937 )
custom_fonts/font = SubResource( 2 )
text = "LOAD A MAP"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ColorRect2" type="ColorRect" parent="."]
material = ExtResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 0.686275, 0.933333, 1, 0.0862745 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -779.0
margin_top = -325.0
margin_right = -75.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 52, 345 )
mouse_filter = 2
texture = ExtResource( 21 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.686275, 0.705882, 1, 0.0666667 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 90.0
margin_right = 675.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 52, 345 )
texture = ExtResource( 21 )
expand = true

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
